--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
   <title>Frontend Mentor | Blog preview card</title>
 </head>
 <body>
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
+  <div class="container">
+    <div class="card">
+      <img src="./assets/images/illustration-article.svg" alt="">
+      <p class="tag">Learning</p>
+      <p class="date">Published 21 Dec 2023</p>
+      <h1 class="title">HTML & CSS foundations</h1>
+      <p class="txt">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+      <div class="author">
+        <img src="./assets/images/image-avatar.webp" alt="">
+        <p class="author-name">Greg Hooper</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
