--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="import" href="https://fonts.google.com/specimen/Figtree">
   <link rel="stylesheet" href="css/styles.css">
   <title>Frontend Mentor | Blog preview card</title>
 </head>
 <body>
   <div class="container">
     <div class="card">
-      <img src="./assets/images/illustration-article.svg" alt="">
-      <p class="tag">Learning</p>
+      <img class="header-img" src="./assets/images/illustration-article.svg" alt="">
+      <div class="card-contents">
+        <p class="tag">Learning</p>
       <p class="date">Published 21 Dec 2023</p>
       <h1 class="title">HTML & CSS foundations</h1>
       <p class="txt">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       <div class="author">
-        <img src="./assets/images/image-avatar.webp" alt="">
+        <img class="avatar" src="./assets/images/image-avatar.webp" alt="">
         <p class="author-name">Greg Hooper</p>
+      </div>
       </div>
     </div>
   </div>
